crates/ide/src/completion/engine/snapshots/ide__completion__engine__tests__completion_fixtures@does_not_complete_after_port_type_in_ansi_port_list.v.snap
---
source: crates/ide/src/completion/engine/tests.rs
expression: items
input_file: crates/ide/src/completion/engine/fixtures/does_not_complete_after_port_type_in_ansi_port_list.v
---
[]
