crates/ide/src/completion/engine/snapshots/ide__completion__engine__tests__completion_fixtures@filters_already_connected_named_port_names_in_list.v.snap
---
source: crates/ide/src/completion/engine/tests.rs
expression: items
input_file: crates/ide/src/completion/engine/fixtures/filters_already_connected_named_port_names_in_list.v
---
[
    CompletionItem {
        label: "b",
        kind: Text,
        edit: Some(
            TextEditItem {
                ins: ".b()",
                del: 94..94,
            },
        ),
        snippet_edit: Some(
            TextEditItem {
                ins: ".b(${1:expr})",
                del: 94..94,
            },
        ),
    },
]
