crates/ide/src/completion/engine/snapshots/ide__completion__engine__tests__completion_fixtures@filters_assignment_rhs_by_expected_type.v.snap
---
source: crates/ide/src/completion/engine/tests.rs
assertion_line: 188
expression: items
input_file: crates/ide/src/completion/engine/fixtures/filters_assignment_rhs_by_expected_type.v
---
[
    CompletionItem {
        label: "lhs",
        kind: Text,
        edit: Some(
            TextEditItem {
                ins: "lhs",
                del: 99..99,
            },
        ),
        snippet_edit: None,
    },
    CompletionItem {
        label: "same_width",
        kind: Text,
        edit: Some(
            TextEditItem {
                ins: "same_width",
                del: 99..99,
            },
        ),
        snippet_edit: None,
    },
    CompletionItem {
        label: "wrong_width",
        kind: Text,
        edit: Some(
            TextEditItem {
                ins: "wrong_width",
                del: 99..99,
            },
        ),
        snippet_edit: None,
    },
]
