crates/ide/src/completion/engine/snapshots/ide__completion__engine__tests__completion_fixtures@filters_gate_primitives_in_statement_completion.v.snap
---
source: crates/ide/src/completion/engine/tests.rs
expression: items
input_file: crates/ide/src/completion/engine/fixtures/filters_gate_primitives_in_statement_completion.v
---
[
    CompletionItem {
        label: "assign",
        kind: Snippet,
        edit: Some(
            TextEditItem {
                ins: "assign",
                del: 26..27,
            },
        ),
        snippet_edit: Some(
            TextEditItem {
                ins: "assign ${1:lhs} = ${0:rhs};",
                del: 26..27,
            },
        ),
    },
    CompletionItem {
        label: "assign",
        kind: Keyword,
        edit: Some(
            TextEditItem {
                ins: "assign",
                del: 26..27,
            },
        ),
        snippet_edit: None,
    },
    CompletionItem {
        label: "automatic",
        kind: Keyword,
        edit: Some(
            TextEditItem {
                ins: "automatic",
                del: 26..27,
            },
        ),
        snippet_edit: None,
    },
]
