crates/ide/src/completion/engine/snapshots/ide__completion__engine__tests__completion_fixtures@filters_named_port_connection_expr_by_width.v.snap
---
source: crates/ide/src/completion/engine/tests.rs
assertion_line: 188
expression: items
input_file: crates/ide/src/completion/engine/fixtures/filters_named_port_connection_expr_by_width.v
---
[
    CompletionItem {
        label: "sig1",
        kind: Text,
        edit: Some(
            TextEditItem {
                ins: "sig1",
                del: 100..100,
            },
        ),
        snippet_edit: None,
    },
    CompletionItem {
        label: "sig4",
        kind: Text,
        edit: Some(
            TextEditItem {
                ins: "sig4",
                del: 100..100,
            },
        ),
        snippet_edit: None,
    },
    CompletionItem {
        label: "sig8",
        kind: Text,
        edit: Some(
            TextEditItem {
                ins: "sig8",
                del: 100..100,
            },
        ),
        snippet_edit: None,
    },
]
